--- a/src/features/search/components/ListingSection/ListingSection.module.css
+++ b/src/features/search/components/ListingSection/ListingSection.module.css
@@ -38,6 +38,12 @@
 
 @media (max-width: 1000px) {
   .listing-section {
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+  }
+}
+
+@media (max-width: 750px) {
+  .listing-section {
     grid-template-columns: repeat(2, minmax(100px, 1fr));
   }
 }
